--- a/week07/index.html
+++ b/week07/index.html
@@ -27,6 +27,7 @@
                 <div id="menu">
                     <ul>
                         <li><a href="notes.html">Notes</a></li>
+                        <li><a href="TeamActivity/hikes5/hiking-complete.html">W05 Team Activity</a></li>
                     </ul>
                 </div>
             </div>
