--- a/week08/index.html
+++ b/week08/index.html
@@ -27,6 +27,7 @@
                 <div id="menu">
                     <ul>
                         <li><a href="notes.html">Notes</a></li>
+                        <li><a href="TeamActivity/teamActivity.html">W08 Team Activity</a></li>
                     </ul>
                 </div>
             </div>
