--- a/week10/TeamActivity/index.html
+++ b/week10/TeamActivity/index.html
@@ -1,20 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <meta charset="utf-8" />
-    <title>Local Quakes</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-   
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Team Activity | Week 10</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="../../css/bootstrap.css">
+    <!-- main css -->
+    <link rel="stylesheet" href="../../css/style.css">
+    <link rel="stylesheet" href="../../css/responsive.css">
+  
 </head>
 
 <body>
-  
-    <main>
-        <h1>Quake List</h1>
-        <ul id="quakeList"></ul>
-    </main>
-    <script src="index.js" type="module"></script>
+    <div id="main">
+        <div id="header">
+            <div id="logo_text">
+                <h1>Ponder: Team Activity</h1>
+                <h2>Week 10</h2>
+            </div>
+        </div>
+        <div id="site_content">
+            <h2>Quake List</h2>
+            <hr>
+            <div id="content">
+                <ul id="quakeList"></ul>
+                </main>
+                <script src="index.js" type="module"></script>
+            </div>
+        </div>
+    </div>
+    <div id="footer">
+        <hr>
+        <a href="../index.html">Week 10</a>
+        <p>Copyright&copy; 2020 | Portfolio | Lis Alves</p>
+    </div>
 </body>
 
 </html>
