--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                         <li><a href="week11/index.html">Week 11</a></li>
                         <li><a href="week12/index.html">Week 12</a></li>
                         <li><a href="week13/index.html">Week 13</a></li>
+                        <li><a href="books/index.html">Final Project</a></li>
                     </ul>
                 </div>
             </div>
