--- a/books/index.html
+++ b/books/index.html
@@ -2,48 +2,51 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Track Books</title>
-  
-  <link rel="stylesheet" href="index.css" />
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="../../css/bootstrap.css">
-  <!-- main css -->
-  <link rel="stylesheet" href="../../css/style.css">
-  <link rel="stylesheet" href="../../css/responsive.css">
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Track Books</title>
+	<link rel="stylesheet" href="index.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+	<script type="text/javascript" src="https://www.google.com/books/jsapi.js"></script>
+	<script type="text/javascript" src="https://books.google.com/books/previewlib.js"></script>
+
+	<script src="index.js"></script>
+
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="../css/bootstrap.css">
+	<!-- main css -->
+	<link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="../css/responsive.css">
+
 </head>
 
 <body>
-  <aside>
-    <div class="logo">
-      <a href="https://lisbyui.github.io/WDD-330/books">
-        Track Books
-      </a>
-    </div>
+	<div id="main">
+		<header>
+			<div id="logo">
+				<a href="https://lisbyui.github.io/WDD-330/books">
+					<img src="img/image_preview.png" alt="myself" class="img-fluid img-circle">
+					<h1>Track Books</h1>
+				</a>
+			</div>
+		</header>
 
-  </aside>
-  <main id="main" class="main">
-    <article>
-      <section id="search" class="results">
-        <div class="flex">
-          <input id="search-box" class="search-box" placeholder="Search books by name, author, genre and etc ..."
-            aria-label="Search books" />
-        </div>
-        <div class="list-book search">
-          <div class="prompt">Enter a search term</div>
-        </div>
-      </section>
-
-      <footer id="footer" class="footer">
-        <hr>
-        <a href="../index.html">Home page</a>
-        <p>Copyright&copy; 2020 | Portfolio | Lis Alves</p>
-      </footer>
-    </article>
-
-  </main>
-  <script src="index.js"></script>
+		<div id="site_content">
+			<h3>Search by</h3>
+			<hr>
+			<div id="content"></div>
+			<div class="filter">
+				<form id="filters">
+				</form>
+			</div>
+		</div>
+	</div>
+	<div id="footer">
+		<hr>
+		<a href="../index.html">Home page</a>
+		<p>Copyright&copy; 2020 | Portfolio | Lis Alves</p>
+	</div>
 </body>
 
 </html>
