--- a/books/index.html
+++ b/books/index.html
@@ -2,51 +2,52 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Track Books</title>
-	<link rel="stylesheet" href="index.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-	<script type="text/javascript" src="https://www.google.com/books/jsapi.js"></script>
-	<script type="text/javascript" src="https://books.google.com/books/previewlib.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Track Books</title>
+  <link rel="stylesheet" href="index.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+  <script type="text/javascript" src="https://www.google.com/books/jsapi.js"></script>
+  <script type="text/javascript" src="https://books.google.com/books/previewlib.js"></script>
 
-	<script src="index.js"></script>
+  <script src="index.js"></script>
 
-	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="../css/bootstrap.css">
-	<!-- main css -->
-	<link rel="stylesheet" href="../css/style.css">
-	<link rel="stylesheet" href="../css/responsive.css">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="../css/bootstrap.css">
+  <!-- main css -->
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/responsive.css">
 
 </head>
 
 <body>
-	<div id="main">
-		<header>
-			<div id="logo">
-				<a href="https://lisbyui.github.io/WDD-330/books">
-					<img src="img/image_preview.png" alt="myself" class="img-fluid img-circle">
-					<h1>Track Books</h1>
-				</a>
-			</div>
-		</header>
+  <div id="main">
+    <header>
+      <div id="logo">
+        <a href="https://lisbyui.github.io/WDD-330/books">
+          <img src="img/image_preview.png" alt="myself" class="img-fluid img-circle">
+          <h1>Track Books</h1>
+        </a>
+      </div>
+    </header>
 
-		<div id="site_content">
-			<h3>Search by</h3>
-			<hr>
-			<div id="content"></div>
-			<div class="filter">
-				<form id="filters">
-				</form>
-			</div>
-		</div>
-	</div>
-	<div id="footer">
-		<hr>
-		<a href="../index.html">Home page</a>
-		<p>Copyright&copy; 2020 | Portfolio | Lis Alves</p>
-	</div>
+    <div id="site_content">
+      <h3>Search by</h3>
+      <hr>
+      <div id="content"></div>
+      <div class="filter">
+        <form id="filters">
+          <input type="submit" id="reset" class="filter" value="Reset" />
+        </form>
+      </div>
+    </div>
+  </div>
+  <div id="footer">
+    <hr>
+    <a href="../index.html">Home page</a>
+    <p>Copyright&copy; 2020 | Portfolio | Lis Alves</p>
+  </div>
 </body>
 
 </html>
