--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
                         <li><a href="books/index.html">Final Project</a></li>
                     </ul>
                 </div>
+
+                <video width="400" controls>
+                    <source src="image/Wdd330.mp4" type="video/mp4">
+                </video>
+
+                <p>
+                    <a href="https://www.youtube.com/watch?v=bbqrn9RbXos&t=4s" target="_blank"></a>.
+                </p>
             </div>
 
         </div>
